--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <header class="container mx-auto">
+    <header class="container mx-auto mb-8 lg:mb-24">
 
         <!-- navbar section -->
 
@@ -114,7 +114,7 @@
             </div>
             <div class="bg-black rounded-xl p-4 lg:p-8 lg:w-1/3 lg:absolute lg:bottom-8 lg:right-12">
                 <h1 class="text-white text-base lg:text-2xl font-extrabold">Meet all the heroes from the field</h1>
-                <p class="text-gray-500 text-sm lg:text-base ">
+                <p class="text-gray-500 text-sm lg:text-base">
                     Dit amet consectetur. Condimentum dignissim adipiscing aliquam
                     turpis placerat dolor. Purus urna in sit nullam proin. 
                 </p>
@@ -122,8 +122,52 @@
         </div>
     </header>
 
-    <main>
+    <main class="container mx-auto">
+        <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
 
+        <!-- professional hockey club section -->
+
+        <section>
+            <div class="flex flex-col items-center space-y-6 mb-6 lg:mb-8 ">
+                <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Professional Hockeys Club</h1>
+                <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <hr class="w-[90%] lg:w-auto mx-auto mb-6 lg:mb-8 border-dashed">
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 mb-10 lg:mb-24">
+                <div class="space-y-5 flex flex-col items-center">
+                    <div class="radial-progress text-red-500" style="--value:87;" role="progressbar">
+                        <p class="text-black text-2xl font-extrabold">87%</p>
+                    </div>
+                    <h1 class="text-xl font-semibold">Prayer Facility</h1>
+                    <p class="text-gray-500 w-2/3 text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <div class="space-y-5 flex flex-col items-center">
+                    <div class="radial-progress text-green-500" style="--value:95;" role="progressbar">
+                        <p class="text-black text-2xl font-extrabold">95%</p>
+                    </div>
+                    <h1 class="text-xl font-semibold">Prayer Facility</h1>
+                    <p class="text-gray-500 w-2/3 text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <div class="space-y-5 flex flex-col items-center">
+                    <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar">
+                        <p class="text-black text-2xl font-extrabold">90%</p>
+                    </div>
+                    <h1 class="text-xl font-semibold">Prayer Facility</h1>
+                    <p class="text-gray-500 w-2/3 text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <div class="space-y-5 flex flex-col items-center">
+                    <div class="radial-progress text-blue-500" style="--value:80;" role="progressbar">
+                        <p class="text-black text-2xl font-extrabold">80%</p>
+                    </div>
+                    <h1 class="text-xl font-semibold flex flex-col items-center">Prayer Facility</h1>
+                    <p class="text-gray-500 w-2/3 text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+            </div>
+        </section>
+        <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
+        <section class="mb-8 lg:mb-24">
+
+        </section>
     </main>
 
     <footer>
