--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
         <div class="container px-4 lg:relative">
             <div class="carousel rounded-2xl w-auto">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="./Images/1.png" class="w-full"/>
+                    <img src="./Images/1.png" class="w-full" />
                     <div class="absolute flex justify-between transform left-36 bottom-5 lg:left-8 lg:bottom-8 gap-4">
                         <a href="#slide4" class="btn btn-circle bg-black text-white border-none">❮</a>
                         <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="./Images/b2.jpg" class="w-full"/>
+                    <img src="./Images/b2.jpg" class="w-full" />
                     <div class="absolute flex justify-between transform left-36 bottom-5 lg:left-8 lg:bottom-8 gap-4">
                         <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❮</a>
                         <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❯</a>
@@ -112,11 +112,11 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-black rounded-xl p-4 lg:p-8 lg:w-1/3 lg:absolute lg:bottom-8 lg:right-12">
+            <div class="bg-black rounded-xl p-4 lg:p-8 lg:w-1/3 lg:absolute lg:bottom-8 lg:right-12 space-y-2 lg:space-y-4">
                 <h1 class="text-white text-base lg:text-2xl font-extrabold">Meet all the heroes from the field</h1>
                 <p class="text-gray-500 text-sm lg:text-base">
                     Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                    turpis placerat dolor. Purus urna in sit nullam proin. 
+                    turpis placerat dolor. Purus urna in sit nullam proin.
                 </p>
             </div>
         </div>
@@ -130,7 +130,9 @@
         <section>
             <div class="flex flex-col items-center space-y-6 mb-6 lg:mb-8 ">
                 <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Professional Hockeys Club</h1>
-                <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">Dit amet
+                    consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit
+                    nullam proin. </p>
             </div>
             <hr class="w-[90%] lg:w-auto mx-auto mb-6 lg:mb-8 border-dashed">
             <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 mb-10 lg:mb-24">
@@ -165,6 +167,47 @@
             </div>
         </section>
         <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
+
+        <!-- program section -->
+
+        <section class="mb-8 lg:mb-24">
+
+            <div class="flex flex-col items-center space-y-6 mb-6 lg:mb-8 ">
+                <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Program Sections</h1>
+                <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">
+                    Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
+                </p>
+            </div>
+            <hr class="w-[90%] lg:w-auto mx-auto mb-6 lg:mb-8 border-dashed">
+            <div class="p-4 space-y-6">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <div class="w-full h-[244px] lg:h-[338px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/2.png')] bg-cover rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
+                        <h1 class="text-xl lg:text-3xl font-extrabold text-white mt-6 lg:mt-24">Junior Program</h1>
+                        <p class="text-sm lg:text-base font-medium text-white w-auto lg:w-2/3">
+                            Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+                        </p>
+                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48">Register Now!</button>
+                    </div>
+                    <div class="w-full h-[244px] lg:h-[338px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/3.png')] bg-cover rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
+                        <h1 class="text-xl lg:text-3xl font-extrabold text-white mt-6 lg:mt-24">Junior Program</h1>
+                        <p class="text-sm lg:text-base font-medium text-white w-auto lg:w-2/3">
+                            Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+                        </p>
+                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48">Register Now!</button>
+                    </div>
+                </div>
+                <div class="w-full h-[244px] lg:h-[450px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/4.png')] bg-repeat-round rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
+                    <h1 class="text-xl lg:text-3xl font-extrabold text-white mt-6 lg:mt-52">Junior Program</h1>
+                        <p class="text-sm lg:text-base font-medium text-white w-auto lg:w-1/3">
+                            Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+                        </p>
+                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48">Register Now!</button>
+                </div>
+            </div>
+        </section>
+
+        <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
+
         <section class="mb-8 lg:mb-24">
 
         </section>
