our new product section added button hover updated

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                 </svg>
-                <a class="btn ml-6 bg-primary-btn text-white font-bold hover:text-black">Get Ticket</a>
+                <a class="btn ml-6 bg-primary-btn text-white font-bold hover:text-red-500">Get Ticket</a>
             </div>
         </div>
 
@@ -128,7 +128,7 @@
         <!-- professional hockey club section -->
 
         <section>
-            <div class="flex flex-col items-center space-y-6 mb-6 lg:mb-8 ">
+            <div class="flex flex-col items-center space-y-4 lg:space-y-6 mb-6 lg:mb-8 ">
                 <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Professional Hockeys Club</h1>
                 <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">Dit amet
                     consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit
@@ -151,7 +151,7 @@
                     <p class="text-gray-500 w-2/3 text-center">Amet consectetur. Condimentum dignissim adipiscing .</p>
                 </div>
                 <div class="space-y-5 flex flex-col items-center">
-                    <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar">
+                    <div class="radial-progress text-yellow-400" style="--value:90;" role="progressbar">
                         <p class="text-black text-2xl font-extrabold">90%</p>
                     </div>
                     <h1 class="text-xl font-semibold">Prayer Facility</h1>
@@ -172,7 +172,7 @@
 
         <section class="mb-8 lg:mb-24">
 
-            <div class="flex flex-col items-center space-y-6 mb-6 lg:mb-8 ">
+            <div class="flex flex-col items-center space-y-4 lg:space-y-6 mb-6 lg:mb-8 ">
                 <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Program Sections</h1>
                 <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">
                     Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
@@ -181,19 +181,19 @@
             <hr class="w-[90%] lg:w-auto mx-auto mb-6 lg:mb-8 border-dashed">
             <div class="p-4 space-y-6">
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                    <div class="w-full h-[244px] lg:h-[338px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/2.png')] bg-cover rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
+                    <div class="w-full h-[244px] lg:h-[338px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/2.png')] bg-repeat-round rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
                         <h1 class="text-xl lg:text-3xl font-extrabold text-white mt-6 lg:mt-24">Junior Program</h1>
                         <p class="text-sm lg:text-base font-medium text-white w-auto lg:w-2/3">
                             Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
                         </p>
-                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48">Register Now!</button>
+                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48 hover:text-red-600">Register Now!</button>
                     </div>
-                    <div class="w-full h-[244px] lg:h-[338px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/3.png')] bg-cover rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
-                        <h1 class="text-xl lg:text-3xl font-extrabold text-white mt-6 lg:mt-24">Junior Program</h1>
+                    <div class="w-full h-[244px] lg:h-[338px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/3.png')] bg-repeat-round rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
+                        <h1 class="text-xl lg:text-3xl font-extrabold text-white mt-6 lg:mt-24">Teenager Program</h1>
                         <p class="text-sm lg:text-base font-medium text-white w-auto lg:w-2/3">
                             Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
                         </p>
-                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48">Register Now!</button>
+                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48 hover:text-red-600">Register Now!</button>
                     </div>
                 </div>
                 <div class="w-full h-[244px] lg:h-[450px] flex flex-col flex-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(19,19,24,0.2)),url('./Images/4.png')] bg-repeat-round rounded-2xl px-6 lg:px-10 space-y-3 lg:space-y-4">
@@ -201,7 +201,7 @@
                         <p class="text-sm lg:text-base font-medium text-white w-auto lg:w-1/3">
                             Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
                         </p>
-                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48">Register Now!</button>
+                        <button class="btn bg-primary-btn border-none text-white w-2/3 lg:w-48 hover:text-red-600">Register Now!</button>
                 </div>
             </div>
         </section>
@@ -209,7 +209,12 @@
         <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
 
         <section class="mb-8 lg:mb-24">
-
+            <div class="flex flex-col items-center space-y-4 lg:space-y-6 mb-6 lg:mb-8 ">
+                <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Our New Products</h1>
+                <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">
+                    Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
+                </p>
+            </div>
         </section>
     </main>
 
