social media section done with responsive

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
 
+    <!-- fontawesome kit -->
+    <script src="https://kit.fontawesome.com/93d4bcfdcc.js" crossorigin="anonymous"></script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/style.css">
 
@@ -604,7 +607,110 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
+
+        <!-- Clients Question section -->
+
+        <section class="mb-8 lg:mb-24 p-4">
+            <div class="flex flex-col items-center space-y-4 lg:space-y-6 mb-6 lg:mb-8 ">
+                <h1 class="text-xl lg:text-4xl font-extrabold mt-6 lg:mt-8 ">Get In Touch</h1>
+                <p class="text-gray-500 font-medium w-10/12 lg:w-1/3 text-center text-sm lg:text-base">
+                    Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in
+                    sit nullam proin.
+                </p>
+            </div>
+
+            <hr class="w-[90%] lg:w-auto mx-auto border-dashed">
+
+            <div class="flex flex-col lg:flex-row mt-6 lg:mt-12 gap-6">
+                <div class="border-2 p-6 lg:p-12 rounded-2xl w-auto lg:w-1/3 space-y-4 lg:space-y-6">
+                    <div class="card w-auto lg:w-96 bg-[#BCED6D1A] p-6 lg:p-8 space-y-6">
+                        <div>
+                            <img src="./Images/Group1171275317.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="text-gray-500">Phone Number : </h2>
+                            <p class="text-lg font-extrabold">(+62) 123-321-543</p>
+                        </div>
+                    </div>
+
+                    <div class="card w-auto lg:w-96 bg-[#FDDD5F1A] p-6 lg:p-8 space-y-6">
+                        <div>
+                            <img src="./Images/Group1171275318.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="text-gray-500">Email : </h2>
+                            <p class="text-lg font-extrabold">hockeys@support.com</p>
+                        </div>
+                    </div>
+
+                    <div class="card w-auto lg:w-96 bg-[#629CF31A] p-6 lg:p-8 space-y-6">
+                        <div>
+                            <img src="./Images/Group1171275321.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="text-gray-500">Location :</h2>
+                            <p class="text-lg font-extrabold">152/1 Mohakhali Wireless Gate</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- form section -->
+
+                <div class="w-auto lg:w-2/3 space-y-5 lg:space-y-6">
+                    <div class="flex flex-col lg:flex-row w-auto lg:gap-6">
+                        <label class="form-control w-full">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Your Name</span>
+                            </div>
+                            <input type="text" placeholder="Enter your full name" class="input bg-base-200 w-full" />
+                        </label>
+                        <label class="form-control w-full">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Your Email</span>
+                            </div>
+                            <input type="email" placeholder="Enter your email" class="input bg-base-200 w-full" />
+                        </label>
+                    </div>
+                    <div class="flex flex-col lg:flex-row w-auto lg:gap-6">
+                        <label class="form-control w-full">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Subject</span>
+                            </div>
+                            <input type="text" placeholder="Enter your subject" class="input w-full bg-base-200" />
+                        </label>
+                        <label class="form-control w-full">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Phone Number</span>
+                            </div>
+                            <input type="number" placeholder="Enter your phone number" class="input bg-base-200 w-full" />
+                        </label>
+                    </div>
+                    <div class="space-y-4">
+                        <label class="form-control">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Message</span>
+                            </div>
+                            <input type="text" placeholder="Write your message" class="input bg-base-200 w-auto lg:w-2xl h-[200px] lg:h-[370px]" />
+                        </label>
+                    </div>
+                    <button class="btn bg-primary-btn text-white hover:text-red-500 w-full">Send Message</button>
+                </div>
+            </div>
+
+            <div class="flex flex-col bg-gray-100 rounded-2xl py-10 mt-10 space-y-6">
+                <div class="mx-auto">
+                    <h1 class="text-2xl font-extrabold">Social Media</h1>
+                </div>
+                <div class="mx-auto space-x-6">
+                    <i class="fa-brands fa-twitter hover:cursor-pointer hover:text-red-500"></i>
+                    <i class="fa-brands fa-facebook hover:cursor-pointer hover:text-red-500"></i>
+                    <i class="fa-brands fa-instagram hover:cursor-pointer hover:text-red-500"></i>
+                    <i class="fa-brands fa-github hover:cursor-pointer hover:text-red-500"></i>
+                </div>
+            </div>
         </section>
     </main>
 
