our new product section updated

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
 
             <hr class="w-[90%] lg:w-auto mx-auto border-dashed mb-6 lg:mb-12">
 
+            <!-- 1st item  -->
+
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 p-4">
                 <div class="flex flex-col lg:flex-row border-2 rounded-2xl p-6 gap-5">
                     <div>
@@ -274,17 +276,21 @@
                             <p class="text-gray-500 font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis.
                             </p>
                         </div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            <div class="flex gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-6 h-6 text-gray-500">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                             </svg>
                             <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- 2nd item  -->
 
                 <div class="flex flex-col lg:flex-row border-2 rounded-2xl p-6 gap-5">
                     <div>
@@ -320,17 +326,21 @@
                             <p class="text-gray-500 font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis.
                             </p>
                         </div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            <div class="flex gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-6 h-6 text-gray-500">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                             </svg>
                             <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- 3rd item  -->
 
                 <div class="flex flex-col lg:flex-row border-2 rounded-2xl p-6 gap-5">
                     <div>
@@ -366,17 +376,21 @@
                             <p class="text-gray-500 font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis.
                             </p>
                         </div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            <div class="flex gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-6 h-6 text-gray-500">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                             </svg>
                             <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- 4th item  -->
 
                 <div class="flex flex-col lg:flex-row border-2 rounded-2xl p-6 gap-5">
                     <div>
@@ -412,17 +426,21 @@
                             <p class="text-gray-500 font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis.
                             </p>
                         </div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            <div class="flex gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-6 h-6 text-gray-500">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                             </svg>
                             <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- 5th item  -->
 
                 <div class="flex flex-col lg:flex-row border-2 rounded-2xl p-6 gap-5">
                     <div>
@@ -458,17 +476,21 @@
                             <p class="text-gray-500 font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis.
                             </p>
                         </div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            <div class="flex gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-6 h-6 text-gray-500">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                             </svg>
                             <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- 6th item  -->
 
                 <div class="flex flex-col lg:flex-row border-2 rounded-2xl p-6 gap-5">
                     <div>
@@ -504,14 +526,16 @@
                             <p class="text-gray-500 font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis.
                             </p>
                         </div>
-                        <div class="flex gap-2">
+                        <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            <div class="flex gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-6 h-6 text-gray-500">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                             </svg>
                             <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                            </div>
                         </div>
                     </div>
                 </div>
