--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@
                         <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
                             <div class="flex gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 text-gray-500">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
-                            <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-500">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+                                <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
                             </div>
                         </div>
                     </div>
@@ -329,12 +329,12 @@
                         <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
                             <div class="flex gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 text-gray-500">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
-                            <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-500">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+                                <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
                             </div>
                         </div>
                     </div>
@@ -379,12 +379,12 @@
                         <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
                             <div class="flex gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 text-gray-500">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
-                            <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-500">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+                                <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
                             </div>
                         </div>
                     </div>
@@ -429,12 +429,12 @@
                         <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
                             <div class="flex gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 text-gray-500">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
-                            <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-500">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+                                <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
                             </div>
                         </div>
                     </div>
@@ -479,12 +479,12 @@
                         <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
                             <div class="flex gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 text-gray-500">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
-                            <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-500">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+                                <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
                             </div>
                         </div>
                     </div>
@@ -529,12 +529,12 @@
                         <div class="flex gap-5 items-center">
                             <h3 class="text-lg font-extrabold text-red-500">Price - $22.00</h3>
                             <div class="flex gap-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6 text-gray-500">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
-                            <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-500">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+                                <p class="text-gray-500 font-medium">Delivery Fee : Free</p>
                             </div>
                         </div>
                     </div>
@@ -709,7 +709,8 @@
                             <div class="label">
                                 <span class="label-text text-xl font-bold">Phone Number</span>
                             </div>
-                            <input type="number" placeholder="Enter your phone number" class="input bg-base-200 w-full" />
+                            <input type="number" placeholder="Enter your phone number"
+                                class="input bg-base-200 w-full" />
                         </label>
                     </div>
                     <div class="space-y-4">
@@ -717,7 +718,8 @@
                             <div class="label">
                                 <span class="label-text text-xl font-bold">Message</span>
                             </div>
-                            <input type="text" placeholder="Write your message" class="input bg-base-200 w-auto lg:w-2xl h-[200px] lg:h-[370px]" />
+                            <input type="text" placeholder="Write your message"
+                                class="input bg-base-200 w-auto lg:w-2xl h-[200px] lg:h-[370px]" />
                         </label>
                     </div>
                     <button class="btn bg-primary-btn text-white hover:text-red-500 w-full">Send Message</button>
@@ -738,9 +740,58 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="footer p-12 lg:p-36 bg-black text-base-content grid grid-cols-1 lg:grid-cols-2 justify-items-center">
+        <aside class="space-y-4">
+            <h1 class="text-3xl font-extrabold text-white">Get In Touch</h1>
+            <p class="w-auto lg:w-2/3 text-gray-400">
+                Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam
+                proin.
+            </p>
+            <div class="flex gap-4">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6 text-red-600">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                </svg>
+                <p class="text-white">hockeys@support.com</p>
+            </div>
+            <div class="flex gap-4">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6 text-red-500">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+                </svg>
+                <p class="text-white">(+62) 123-321-543</p>
+            </div>
+        </aside>
+        <div class="grid grid-cols-2 lg:grid-cols-2 space-x-10 lg:space-x-20">
+            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                <header class="footer-title">Company</header>
+                <a class="link link-hover hover:text-red-500">About us</a>
+                <a class="link link-hover hover:text-red-500">Leadership</a>
+                <a class="link link-hover hover:text-red-500">Careers</a>
+                <a class="link link-hover hover:text-red-500">News & Article</a>
+                <a class="link link-hover hover:text-red-500">Legal Notice</a>
+            </nav>
+            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                <header class="footer-title">Support</header>
+                <a class="link link-hover hover:text-red-500">Help Center</a>
+                <a class="link link-hover hover:text-red-500">FAQ</a>
+                <a class="link link-hover hover:text-red-500">Ticket Support</a>
+                <a class="link link-hover hover:text-red-500">Contact Us</a>
+            </nav>
+        </div>
+            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                <header class="footer-title">Services</header>
+                <a class="link link-hover hover:text-red-500">Academy</a>
+                <a class="link link-hover hover:text-red-500">Group Lesson</a>
+                <a class="link link-hover hover:text-red-500">Private Lesson</a>
+                <a class="link link-hover hover:text-red-500">Hockeys for Kids</a>
+                <a class="link link-hover hover:text-red-500">Hockeys for Adults</a>
+            </nav>
+        
     </footer>
+
 </body>
 
 </html>
