--- a/index.html
+++ b/index.html
@@ -745,8 +745,9 @@
                             <div class="label">
                                 <span class="label-text text-xl font-bold">Message</span>
                             </div>
-                            <input type="text" placeholder="Write your message"
-                                class="input bg-base-200 w-auto lg:w-2xl h-[200px] lg:h-[370px] focus:border-none" />
+                            <textarea class="textarea textarea bg-base-200 w-auto lg:w-2xl h-[200px] lg:h-[370px] focus:border-none resize-none" placeholder="Write your message"></textarea>
+                            <!-- <input type="text" placeholder="Write your message"
+                                class="input bg-base-200 w-auto lg:w-2xl h-[200px] lg:h-[370px] focus:border-none" /> -->
                         </label>
                     </div>
                     <button class="btn bg-primary-btn text-white hover:text-red-500 w-full font-bold">Send
