--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                         <div>
                             <img src="./Images/Group1171275318.png" alt="">
                         </div>
-                        <div>
+                        <div class="">
                             <h2 class="text-gray-500">Email : </h2>
                             <p class="text-lg font-extrabold">hockeys@support.com</p>
                         </div>
@@ -776,7 +776,7 @@
         </section>
     </main>
 
-    <footer class="footer p-12 lg:p-36 bg-black text-base-content grid grid-cols-1 lg:grid-cols-2 justify-items-center">
+    <footer class="footer p-12 lg:p-36 bg-black text-base-content grid grid-cols-1 lg:grid-cols-2 justify-items-center lg:justify-items-start">
         <aside class="space-y-4 flex flex-col items-center lg:items-start">
             <h1 class="text-3xl font-extrabold text-white">Get In Touch</h1>
             <p class="w-auto lg:w-2/3 text-gray-400 text-center lg:text-left">
@@ -799,31 +799,32 @@
                 <p class="text-white">(+62) 123-321-543</p>
             </div>
         </aside>
-        <div class="grid grid-cols-2 lg:grid-cols-2 space-x-10 lg:space-x-20">
+        <div class="grid grid-cols-2 lg:grid-cols-3 space-x-10 lg:space-x-20 lg:justify-items-center">
             <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
-                <header class="footer-title">Company</header>
+                <header class="text-lg text-white font-bold">Company</header>
                 <a class="link link-hover hover:text-red-500">About us</a>
                 <a class="link link-hover hover:text-red-500">Leadership</a>
                 <a class="link link-hover hover:text-red-500">Careers</a>
-                <a class="link link-hover hover:text-red-500">News & Article</a>
+                <a class="link link-hover hover:text-red-500">News</a>
                 <a class="link link-hover hover:text-red-500">Legal Notice</a>
             </nav>
             <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
-                <header class="footer-title">Support</header>
-                <a class="link link-hover hover:text-red-500">Help Center</a>
+                <header class="text-lg text-white font-bold">Support</header>
+                <a class="link link-hover hover:text-red-500">Help</a>
                 <a class="link link-hover hover:text-red-500">FAQ</a>
-                <a class="link link-hover hover:text-red-500">Ticket Support</a>
-                <a class="link link-hover hover:text-red-500">Contact Us</a>
+                <a class="link link-hover hover:text-red-500">Ticket</a>
+                <a class="link link-hover hover:text-red-500">Contact</a>
+            </nav>
+            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                <header class="text-lg text-white font-bold">Services</header>
+                <a class="link link-hover hover:text-red-500">Academy</a>
+                <a class="link link-hover hover:text-red-500">Group Lesson</a>
+                <a class="link link-hover hover:text-red-500">Private Lesson</a>
+                <a class="link link-hover hover:text-red-500">Hockeys for Kid</a>
+                <a class="link link-hover hover:text-red-500">Hockeys for Adult</a>
             </nav>
         </div>
-        <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
-            <header class="footer-title">Services</header>
-            <a class="link link-hover hover:text-red-500">Academy</a>
-            <a class="link link-hover hover:text-red-500">Group Lesson</a>
-            <a class="link link-hover hover:text-red-500">Private Lesson</a>
-            <a class="link link-hover hover:text-red-500">Hockeys for Kids</a>
-            <a class="link link-hover hover:text-red-500">Hockeys for Adults</a>
-        </nav>
+        
 
     </footer>
 
