footer issue fixed and css updated

--- a/index.html
+++ b/index.html
@@ -583,11 +583,11 @@
             <div
                 class="mt-6 lg:mt-12 flex flex-col lg:flex-row justify-around border-2 rounded-2xl p-6 lg:p-8 gap-6 lg:gap-10">
                 <div class="flex flex-1">
-                    <img src="./Images/11.png" alt="" class="w-full h-[180px] lg:h-auto">
+                    <img src="./Images/11.png" alt="" class="w-full h-[180px] lg:h-auto ">
                 </div>
                 <div class="flex flex-col flex-1 justify-around">
 
-                    <div class="collapse collapse-plus lg:space-y-4">
+                    <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
                             Our Equipment
@@ -598,7 +598,7 @@
                         </div>
                     </div>
                     <hr class="mt-1 lg:mt-6">
-                    <div class="collapse collapse-plus lg:space-y-4">
+                    <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
                             Hockey Training
@@ -610,7 +610,7 @@
                         </div>
                     </div>
                     <hr class="mt-1 lg:mt-6">
-                    <div class="collapse collapse-plus lg:space-y-4">
+                    <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
                             Private Lessons
@@ -621,7 +621,7 @@
                         </div>
                     </div>
                     <hr class="mt-1 lg:mt-6">
-                    <div class="collapse collapse-plus lg:space-y-4">
+                    <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
                             Ski Touring
@@ -633,7 +633,7 @@
                         </div>
                     </div>
                     <hr class="mt-1 lg:mt-6">
-                    <div class="collapse collapse-plus lg:space-y-4">
+                    <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
                             Booking
@@ -646,7 +646,7 @@
                         </div>
                     </div>
                     <hr class="mt-1 lg:mt-6">
-                    <div class="collapse collapse-plus lg:space-y-4">
+                    <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
                             Pricings
@@ -775,57 +775,62 @@
             </div>
         </section>
     </main>
-
-    <footer class="footer p-12 lg:p-36 bg-black text-base-content grid grid-cols-1 lg:grid-cols-2 justify-items-center lg:justify-items-start">
-        <aside class="space-y-4 flex flex-col items-center lg:items-start">
-            <h1 class="text-3xl font-extrabold text-white">Get In Touch</h1>
-            <p class="w-auto lg:w-2/3 text-gray-400 text-center lg:text-left">
-                Your Gateway to Exceptional Service and Seamless Connections.
-            </p>
-            <div class="flex gap-4">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-6 text-red-600">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
-                </svg>
-                <p class="text-white">hockeys@support.com</p>
+    <!-- text-base-content grid grid-cols-1 lg:grid-cols-1 justify-items-center lg:justify-items-start -->
+    <footer class="bg-black ">
+        <div class="container mx-auto flex w-full flex-col lg:flex-row justify-center lg:justify-around p-6 lg:py-28 space-y-5 lg:space-y-0">
+            <aside class="space-y-4 flex flex-col items-center lg:items-start">
+                <h1 class="text-3xl font-extrabold text-white">Get In Touch</h1>
+                <p class="w-auto lg:w-2/3 text-gray-400 text-center lg:text-left">
+                    Your Gateway to Exceptional Service and Seamless Connections.
+                </p>
+                <div class="flex gap-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 text-red-600">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                    </svg>
+                    <p class="text-white">hockeys@support.com</p>
+                </div>
+                <div class="flex gap-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 text-red-500">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+                    </svg>
+                    <p class="text-white">(+62) 123-321-543</p>
+                </div>
+            </aside>
+            <!-- grid grid-cols-2 lg:grid-cols-3 lg:space-x-20 lg:justify-items-center -->
+            <div class="grid grid-cols-2 lg:space-x-20 lg:justify-items-center">
+                <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                    <header class="text-lg text-white font-bold">Company</header>
+                    <a class="link link-hover hover:text-red-500">About us</a>
+                    <a class="link link-hover hover:text-red-500">Leadership</a>
+                    <a class="link link-hover hover:text-red-500">Careers</a>
+                    <a class="link link-hover hover:text-red-500">News</a>
+                    <a class="link link-hover hover:text-red-500">Legal Notice</a>
+                </nav>
+                <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                    <header class="text-lg text-white font-bold">Support</header>
+                    <a class="link link-hover hover:text-red-500">Help</a>
+                    <a class="link link-hover hover:text-red-500">FAQ</a>
+                    <a class="link link-hover hover:text-red-500">Ticket</a>
+                    <a class="link link-hover hover:text-red-500">Contact</a>
+                </nav>
+                
             </div>
-            <div class="flex gap-4">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-6 text-red-500">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
-                </svg>
-                <p class="text-white">(+62) 123-321-543</p>
+            <div class="grid grid-cols-1 justify-items-center">
+                <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
+                    <header class="text-lg text-white font-bold">Services</header>
+                    <a class="link link-hover hover:text-red-500">Academy</a>
+                    <a class="link link-hover hover:text-red-500">Group Lesson</a>
+                    <a class="link link-hover hover:text-red-500">Private Lesson</a>
+                    <a class="link link-hover hover:text-red-500">Hockeys for Kid</a>
+                    <a class="link link-hover hover:text-red-500">Hockeys for Adult</a>
+                </nav>
             </div>
-        </aside>
-        <div class="grid grid-cols-2 lg:grid-cols-3 space-x-10 lg:space-x-20 lg:justify-items-center">
-            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
-                <header class="text-lg text-white font-bold">Company</header>
-                <a class="link link-hover hover:text-red-500">About us</a>
-                <a class="link link-hover hover:text-red-500">Leadership</a>
-                <a class="link link-hover hover:text-red-500">Careers</a>
-                <a class="link link-hover hover:text-red-500">News</a>
-                <a class="link link-hover hover:text-red-500">Legal Notice</a>
-            </nav>
-            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
-                <header class="text-lg text-white font-bold">Support</header>
-                <a class="link link-hover hover:text-red-500">Help</a>
-                <a class="link link-hover hover:text-red-500">FAQ</a>
-                <a class="link link-hover hover:text-red-500">Ticket</a>
-                <a class="link link-hover hover:text-red-500">Contact</a>
-            </nav>
-            <nav class="text-white flex flex-col space-y-3 items-center lg:items-start">
-                <header class="text-lg text-white font-bold">Services</header>
-                <a class="link link-hover hover:text-red-500">Academy</a>
-                <a class="link link-hover hover:text-red-500">Group Lesson</a>
-                <a class="link link-hover hover:text-red-500">Private Lesson</a>
-                <a class="link link-hover hover:text-red-500">Hockeys for Kid</a>
-                <a class="link link-hover hover:text-red-500">Hockeys for Adult</a>
-            </nav>
         </div>
         
-
     </footer>
 
 </body>
